--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"url" : "http://www.k33g.org"
 	},
 	"dependencies": {
-        "express": "*",
-        "mathjs": "*"
+        "express": "3.5.1",
+        "mathjs": "0.19.0"
 	}
 }
 
